--- a/views/collection_views.xml
+++ b/views/collection_views.xml
@@ -199,7 +199,7 @@
         <field name="name">Today's Collections</field>
         <field name="res_model">property.collection</field>
         <field name="view_mode">list,form</field>
-        <field name="domain">[('date', '=', context_today().strftime('%Y-%m-%d'))]</field>
-        <field name="context">{'default_date': context_today().strftime('%Y-%m-%d'), 'search_default_today': 1}</field>
+        <field name="domain">[('date', '=', context_today())]</field>
+        <field name="context">{'search_default_today': 1}</field>
     </record>
 </odoo>
