--- a/views/collection_views.xml
+++ b/views/collection_views.xml
@@ -169,12 +169,7 @@
                     
                     <field name="notes" placeholder="Additional notes..."/>
                 </sheet>
-                
-                <div class="oe_chatter">
-                    <field name="message_follower_ids"/>
-                    <field name="activity_ids"/>
-                    <field name="message_ids"/>
-                </div>
+                <chatter/>
             </form>
         </field>
     </record>
