--- a/views/invoice_views.xml
+++ b/views/invoice_views.xml
@@ -221,6 +221,10 @@
                             <field name="collection_id" readonly="1"/>
                         </group>
                     </group>
+                    
+                    <group string="Additional Information">
+                        <field name="notes" placeholder="Add payment notes or comments..."/>
+                    </group>
                 </sheet>
                 <chatter/>
             </form>
