--- a/views/agreement_views.xml
+++ b/views/agreement_views.xml
@@ -34,6 +34,11 @@
                     <field name="state" widget="statusbar" statusbar_visible="draft,active,expired,terminated"/>
                 </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_view_invoices" type="object" class="oe_stat_button" icon="fa-pencil-square-o" invisible="invoices_count == 0">
+                            <field name="invoices_count" widget="statinfo" string="Invoices"/>
+                        </button>
+                    </div>
                     <div class="oe_title">
                         <h1>
                             <field name="name" readonly="1"/>
